--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ببب Tracking with 3D Model</title>
+  <title>ااااا Tracking with 3D Model</title>
   <style>
     video { width: 640px; height: 480px; border: 1px solid blue; }
     canvas { border: 1px solid black; }
