--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Hand Tracking with 3D Model</title>
+  <title>ثثث Tracking with 3D Model</title>
   <style>
     video { width: 640px; height: 480px; border: 1px solid blue; }
     canvas { border: 1px solid black; }
@@ -19,11 +19,8 @@
   <!-- بارگذاری MediaPipe Hands -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1646424915/hands.js"></script>
   <!-- بارگذاری Three.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" onload="console.log('Three.js loaded successfully')" onerror="console.error('Failed to load Three.js from CDN')"></script>
-  <!-- بارگذاری GLTFLoader -->
-  <script src="https://cdn.jsdelivr.net/npm/three@0.134.0/examples/js/loaders/GLTFLoader.js" onload="console.log('GLTFLoader loaded')" onerror="console.error('Failed to load GLTFLoader')"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" onload="console.log('Three.js loaded')" onerror="console.error('Failed to load Three.js')"></script>
   <script>
-    // چک کردن لود شدن Three.js
     if (typeof THREE === 'undefined') {
       console.error('THREE is not defined.');
       alert('Failed to load Three.js. Check your internet connection.');
@@ -44,7 +41,7 @@
     });
 
     hands.setOptions({
-      maxNumHands: 1, // برای سادگی، فقط یه دست
+      maxNumHands: 2,
       modelComplexity: 1,
       minDetectionConfidence: 0.5,
       minTrackingConfidence: 0.5
@@ -55,59 +52,71 @@
     const camera = new THREE.PerspectiveCamera(75, 640 / 480, 0.1, 1000);
     const renderer = new THREE.WebGLRenderer({ canvas: threeCanvas });
     renderer.setSize(640, 480);
-    camera.position.z = 5;
+    renderer.setClearColor(0xdddddd); // پس‌زمینه خاکستری روشن
+    camera.position.z = 10; // فاصله دوربین بیشتر برای دید بهتر
 
     // نور محیطی
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.5);
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.8); // نور قوی‌تر
     scene.add(ambientLight);
     const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
     directionalLight.position.set(0, 1, 1);
     scene.add(directionalLight);
 
-    // لودر برای مدل GLTF
-    const loader = new THREE.GLTFLoader();
-    let handModel;
-
-    // بارگذاری مدل دست (این یه مدل نمونه‌ست، می‌تونید عوضش کنید)
-    loader.load(
-      'https://raw.githubusercontent.com/KhronosGroup/glTF-Sample-Models/master/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf', // مدل نمونه
-      (gltf) => {
-        handModel = gltf.scene;
-        handModel.scale.set(2, 2, 2); // مقیاس مدل
-        handModel.position.set(0, 0, 0);
-        scene.add(handModel);
-        console.log('Hand model loaded');
-      },
-      (xhr) => console.log(`Loading model: ${(xhr.loaded / xhr.total * 100)}%`),
-      (error) => console.error('Error loading model:', error)
-    );
+    // آرایه برای نقاط سه‌بعدی
+    const handMeshes = [];
 
     hands.onResults((results) => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-      if (results.multiHandLandmarks && handModel) {
+      // پاک کردن مدل‌های قبلی
+      handMeshes.forEach(mesh => scene.remove(mesh));
+      handMeshes.length = 0;
+
+      if (results.multiHandLandmarks) {
         console.log(`Detected ${results.multiHandLandmarks.length} hands`);
-        const landmarks = results.multiHandLandmarks[0]; // فقط اولین دست
+        for (const landmarks of results.multiHandLandmarks) {
+          for (const [i, point] of landmarks.entries()) {
+            const x = (point.x - 0.5) * 10;
+            const y = -(point.y - 0.5) * 10;
+            const z = point.z * 10;
 
-        // موقعیت مدل رو بر اساس نقطه مچ (landmark 0) تنظیم می‌کنیم
-        const wrist = landmarks[0];
-        const x = (wrist.x - 0.5) * 10;
-        const y = -(wrist.y - 0.5) * 10;
-        const z = wrist.z * 10;
-        handModel.position.set(x, y, z);
+            // کره برای هر نقطه
+            const geometry = new THREE.SphereGeometry(0.15, 16, 16); // کمی بزرگ‌تر
+            const material = new THREE.MeshPhongMaterial({ color: 0xff0000 });
+            const sphere = new THREE.Mesh(geometry, material);
+            sphere.position.set(x, y, z);
+            scene.add(sphere);
+            handMeshes.push(sphere);
 
-        // رسم نقاط روی کانواس 2D
-        for (const point of landmarks) {
-          const canvasX = point.x * canvas.width;
-          const canvasY = point.y * canvas.height;
-          ctx.beginPath();
-          ctx.arc(canvasX, canvasY, 5, 0, 2 * Math.PI);
-          ctx.fillStyle = 'red';
-          ctx.fill();
+            // رسم نقاط روی کانواس 2D
+            const canvasX = point.x * canvas.width;
+            const canvasY = point.y * canvas.height;
+            ctx.beginPath();
+            ctx.arc(canvasX, canvasY, 5, 0, 2 * Math.PI);
+            ctx.fillStyle = 'red';
+            ctx.fill();
+
+            // خطوط بین نقاط
+            if (i > 0) {
+              const prevPoint = landmarks[i - 1];
+              const prevX = (prevPoint.x - 0.5) * 10;
+              const prevY = -(prevPoint.y - 0.5) * 10;
+              const prevZ = prevPoint.z * 10;
+
+              const lineGeometry = new THREE.BufferGeometry().setFromPoints([
+                new THREE.Vector3(prevX, prevY, prevZ),
+                new THREE.Vector3(x, y, z)
+              ]);
+              const lineMaterial = new THREE.LineBasicMaterial({ color: 0x00ff00 });
+              const line = new THREE.Line(lineGeometry, lineMaterial);
+              scene.add(line);
+              handMeshes.push(line);
+            }
+          }
         }
       } else {
-        console.log("No hands detected or model not loaded yet");
+        console.log("No hands detected");
       }
     });
 
