--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ثثث Tracking with 3D Model</title>
+  <title>Hand Tracking with 3D Model</title>
   <style>
     video { width: 640px; height: 480px; border: 1px solid blue; }
     canvas { border: 1px solid black; }
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h3>Hand Tracking with 3D Model</h3>
+  <h3>ففففف Tracking with 3D Model</h3>
   <video id="video" autoplay playsinline></video>
   <canvas id="canvas" width="640" height="480"></canvas>
   <canvas id="threeCanvas"></canvas>
@@ -19,14 +19,18 @@
   <!-- بارگذاری MediaPipe Hands -->
   <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands@0.4.1646424915/hands.js"></script>
   <!-- بارگذاری Three.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" onload="console.log('Three.js loaded')" onerror="console.error('Failed to load Three.js')"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" onload="console.log('Three.js loaded successfully')" onerror="console.error('Failed to load Three.js')"></script>
   <script>
+    // چک کردن لود شدن Three.js
     if (typeof THREE === 'undefined') {
-      console.error('THREE is not defined.');
-      alert('Failed to load Three.js. Check your internet connection.');
+      console.error('THREE is not defined. Make sure Three.js is loaded correctly.');
+      alert('Failed to load Three.js. Check your internet connection or console for details.');
       throw new Error('Three.js not loaded');
+    } else {
+      console.log('THREE is defined. Proceeding with setup.');
     }
 
+    // دسترسی به المان‌ها
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
@@ -53,19 +57,21 @@
     const renderer = new THREE.WebGLRenderer({ canvas: threeCanvas });
     renderer.setSize(640, 480);
     renderer.setClearColor(0xdddddd); // پس‌زمینه خاکستری روشن
-    camera.position.z = 10; // فاصله دوربین بیشتر برای دید بهتر
+    camera.position.z = 10; // فاصله دوربین برای دید بهتر
 
-    // نور محیطی
-    const ambientLight = new THREE.AmbientLight(0xffffff, 0.8); // نور قوی‌تر
+    // نور محیطی و جهت‌دار
+    const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
     scene.add(ambientLight);
     const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
     directionalLight.position.set(0, 1, 1);
     scene.add(directionalLight);
 
-    // آرایه برای نقاط سه‌بعدی
+    // آرایه برای نگه‌داری اشیای سه‌بعدی
     const handMeshes = [];
 
+    // پردازش نتایج MediaPipe
     hands.onResults((results) => {
+      // رسم روی کانواس 2D
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
@@ -77,12 +83,13 @@
         console.log(`Detected ${results.multiHandLandmarks.length} hands`);
         for (const landmarks of results.multiHandLandmarks) {
           for (const [i, point] of landmarks.entries()) {
+            // مختصات سه‌بعدی
             const x = (point.x - 0.5) * 10;
             const y = -(point.y - 0.5) * 10;
             const z = point.z * 10;
 
             // کره برای هر نقطه
-            const geometry = new THREE.SphereGeometry(0.15, 16, 16); // کمی بزرگ‌تر
+            const geometry = new THREE.SphereGeometry(0.15, 16, 16);
             const material = new THREE.MeshPhongMaterial({ color: 0xff0000 });
             const sphere = new THREE.Mesh(geometry, material);
             sphere.position.set(x, y, z);
@@ -120,6 +127,7 @@
       }
     });
 
+    // تابع شروع دوربین
     async function startCamera() {
       console.log("Starting camera...");
       try {
@@ -143,6 +151,7 @@
       }
     }
 
+    // تابع انیمیشن
     async function animate() {
       if (video.readyState >= 2) {
         try {
@@ -158,6 +167,7 @@
       requestAnimationFrame(animate);
     }
 
+    // شروع برنامه
     (async () => {
       console.log("Starting...");
       try {
