--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>عععع Tracking with 3D Model</title>
+  <title>غغغغثثث Tracking with 3D Model</title>
   <style>
     video { width: 640px; height: 480px; border: 1px solid blue; }
     canvas { border: 1px solid black; }
@@ -11,7 +11,7 @@
   </style>
 </head>
 <body>
-  <h3>ففففف Tracking with 3D Model</h3>
+  <h3>Hand Tracking with 3D Model</h3>
   <video id="video" autoplay playsinline></video>
   <canvas id="canvas" width="640" height="480"></canvas>
   <canvas id="threeCanvas"></canvas>
@@ -30,7 +30,6 @@
       console.log('THREE is defined. Proceeding with setup.');
     }
 
-    // دسترسی به المان‌ها
     const video = document.getElementById('video');
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
@@ -57,7 +56,8 @@
     const renderer = new THREE.WebGLRenderer({ canvas: threeCanvas });
     renderer.setSize(640, 480);
     renderer.setClearColor(0xdddddd); // پس‌زمینه خاکستری روشن
-    camera.position.z = 10; // فاصله دوربین برای دید بهتر
+    camera.position.z = 10;
+    console.log('Renderer and camera initialized');
 
     // نور محیطی و جهت‌دار
     const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
@@ -65,17 +65,23 @@
     const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
     directionalLight.position.set(0, 1, 1);
     scene.add(directionalLight);
+    console.log('Lights added to scene');
 
-    // آرایه برای نگه‌داری اشیای سه‌بعدی
+    // آرایه برای نقاط سه‌بعدی
     const handMeshes = [];
 
-    // پردازش نتایج MediaPipe
+    // تست رندر با یه کره ثابت
+    const testGeometry = new THREE.SphereGeometry(1, 16, 16);
+    const testMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
+    const testSphere = new THREE.Mesh(testGeometry, testMaterial);
+    testSphere.position.set(0, 0, 0);
+    scene.add(testSphere);
+    console.log('Test sphere added at (0, 0, 0)');
+
     hands.onResults((results) => {
-      // رسم روی کانواس 2D
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-      // پاک کردن مدل‌های قبلی
       handMeshes.forEach(mesh => scene.remove(mesh));
       handMeshes.length = 0;
 
@@ -83,12 +89,11 @@
         console.log(`Detected ${results.multiHandLandmarks.length} hands`);
         for (const landmarks of results.multiHandLandmarks) {
           for (const [i, point] of landmarks.entries()) {
-            // مختصات سه‌بعدی
             const x = (point.x - 0.5) * 10;
             const y = -(point.y - 0.5) * 10;
             const z = point.z * 10;
+            console.log(`Point ${i}: (${x}, ${y}, ${z})`);
 
-            // کره برای هر نقطه
             const geometry = new THREE.SphereGeometry(0.15, 16, 16);
             const material = new THREE.MeshPhongMaterial({ color: 0xff0000 });
             const sphere = new THREE.Mesh(geometry, material);
@@ -96,7 +101,6 @@
             scene.add(sphere);
             handMeshes.push(sphere);
 
-            // رسم نقاط روی کانواس 2D
             const canvasX = point.x * canvas.width;
             const canvasY = point.y * canvas.height;
             ctx.beginPath();
@@ -104,7 +108,6 @@
             ctx.fillStyle = 'red';
             ctx.fill();
 
-            // خطوط بین نقاط
             if (i > 0) {
               const prevPoint = landmarks[i - 1];
               const prevX = (prevPoint.x - 0.5) * 10;
@@ -127,7 +130,6 @@
       }
     });
 
-    // تابع شروع دوربین
     async function startCamera() {
       console.log("Starting camera...");
       try {
@@ -151,7 +153,6 @@
       }
     }
 
-    // تابع انیمیشن
     async function animate() {
       if (video.readyState >= 2) {
         try {
@@ -164,10 +165,10 @@
         console.log("Video not ready yet, skipping frame");
       }
       renderer.render(scene, camera);
+      console.log('Rendered frame');
       requestAnimationFrame(animate);
     }
 
-    // شروع برنامه
     (async () => {
       console.log("Starting...");
       try {
