--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>غغغغثثث Tracking with 3D Model</title>
+  <title>Hand Tracking with 3D Model</title>
   <style>
     video { width: 640px; height: 480px; border: 1px solid blue; }
     canvas { border: 1px solid black; }
@@ -57,7 +57,6 @@
     renderer.setSize(640, 480);
     renderer.setClearColor(0xdddddd); // پس‌زمینه خاکستری روشن
     camera.position.z = 10;
-    console.log('Renderer and camera initialized');
 
     // نور محیطی و جهت‌دار
     const ambientLight = new THREE.AmbientLight(0xffffff, 0.8);
@@ -65,18 +64,9 @@
     const directionalLight = new THREE.DirectionalLight(0xffffff, 0.5);
     directionalLight.position.set(0, 1, 1);
     scene.add(directionalLight);
-    console.log('Lights added to scene');
 
     // آرایه برای نقاط سه‌بعدی
     const handMeshes = [];
-
-    // تست رندر با یه کره ثابت
-    const testGeometry = new THREE.SphereGeometry(1, 16, 16);
-    const testMaterial = new THREE.MeshPhongMaterial({ color: 0x0000ff });
-    const testSphere = new THREE.Mesh(testGeometry, testMaterial);
-    testSphere.position.set(0, 0, 0);
-    scene.add(testSphere);
-    console.log('Test sphere added at (0, 0, 0)');
 
     hands.onResults((results) => {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -92,7 +82,6 @@
             const x = (point.x - 0.5) * 10;
             const y = -(point.y - 0.5) * 10;
             const z = point.z * 10;
-            console.log(`Point ${i}: (${x}, ${y}, ${z})`);
 
             const geometry = new THREE.SphereGeometry(0.15, 16, 16);
             const material = new THREE.MeshPhongMaterial({ color: 0xff0000 });
@@ -165,7 +154,6 @@
         console.log("Video not ready yet, skipping frame");
       }
       renderer.render(scene, camera);
-      console.log('Rendered frame');
       requestAnimationFrame(animate);
     }
 
